--- a/HTMLFormSubmit/templates/connect.html
+++ b/HTMLFormSubmit/templates/connect.html
@@ -39,7 +39,7 @@
 
 			<form class="contact1-form validate-form" id="contact1-form" action="/connect.html">
 				<span class="contact1-form-title">
-					Get issssssssssssn touch
+					Get in touch
 				</span>
 
 				<div class="wrap-input1 validate-input" data-validate = "Name is required">
